Add packages for vpn l2tp gre utils qos shedulers

--- a/packages_custom.conf
+++ b/packages_custom.conf
@@ -4,7 +4,54 @@ dnsmasq-full
 -wpad-basic-mbedtls
 wpad-mbedtls
 luci-app-upnp
+luci-app-ddns
+luci-app-uhttpd
+etherwake
+luci-app-wol
+watchcat
+luci-app-watchcat
+nlbwmon
+luci-app-nlbwmon
+wifischedule
+luci-app-wifischedule
+nft-qos
+luci-app-nft-qos
+luci-app-pbr
 luci-app-temp-status
 luci-app-cpu-status-mini
 usteer
 luci-app-usteer
+kmod-tun
+kmod-br-netfilter
+openvpn-mbedtls
+luci-app-openvpn
+kmod-wireguard
+wireguard-tools
+luci-proto-wireguard
+kmod-crypto-sha256
+auc
+luci-app-attendedsysupgrade
+gre
+luci-proto-gre
+iperf3
+htop
+nano
+curl
+patch
+diffutils
+ethtool
+iftop
+lsof
+tcpdump-mini
+shadow-useradd
+shadow-usermod
+shadow-groupadd
+shadow-su
+6in4
+6to4
+6rd
+luci-proto-relay
+kmod-l2tp
+kmod-pppol2tp
+ppp-mod-pppol2tp
+xl2tpd
