Add packages for cifs network disk mount

--- a/packages_custom.conf
+++ b/packages_custom.conf
@@ -56,3 +56,10 @@ kmod-pppol2tp
 ppp-mod-pppol2tp
 xl2tpd
 hostapd-utils
+kmod-fs-cifs
+kmod-nls-base
+kmod-nls-utf8
+kmod-crypto-hmac
+kmod-crypto-md5
+kmod-crypto-misc
+cifsmount
